--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
-  "name": "nodeauth-challenge",
-  "version": "1.0.0",
-  "description": "Authentication Sprint Challenge",
-  "main": "index.js",
-  "scripts": {
-    "server": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LambdaSchool/Sprint-Challenge-Authentication.git"
-  },
-  "keywords": [],
-  "author": "Lambda School",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LambdaSchool/Sprint-Challenge-Authentication/issues"
-  },
-  "homepage": "https://github.com/LambdaSchool/Sprint-Challenge-Authentication#readme",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^3.21.2",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.20.4",
-    "sqlite3": "^4.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  }
+	"name": "nodeauth-challenge",
+	"version": "1.0.0",
+	"description": "Authentication Sprint Challenge",
+	"main": "index.js",
+	"scripts": {
+		"server": "nodemon index.js",
+		"test": "cross-env DB_ENV=testing jest --watch",
+		"start": "node index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LambdaSchool/Sprint-Challenge-Authentication.git"
+	},
+	"keywords": [],
+	"author": "Lambda School",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/LambdaSchool/Sprint-Challenge-Authentication/issues"
+	},
+	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge-Authentication#readme",
+	"dependencies": {
+		"axios": "^0.19.0",
+		"bcryptjs": "^2.4.3",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"helmet": "^3.21.2",
+		"jsonwebtoken": "^8.5.1",
+		"knex": "^0.20.4",
+		"sqlite3": "^4.1.1"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.0",
+		"jest": "^25.1.0",
+		"nodemon": "^2.0.2",
+		"supertest": "^4.0.2"
+	},
+	"jest": {
+		"testEnvironment": "node"
+	}
 }
